CANS-1113: IE 11 fix for card overlapping modal (#657)
## JIRA
https://osi-cwds.atlassian.net/browse/CANS-1113

## Description
<!--- Provide a description with context for those that don't know what this pull request is about. -->
Manipulate z-index for the card on modal window open and close to resolve the issue.

## Tests
<!--- Please indicate applicable tests -->
- [ ] I used TDD to develop the feature
- [x] I have included unit tests
- [ ] I have included new acceptance tests or modified existing ones
- [ ] I have included other tests

## Types of changes
<!--- What types of changes does your code introduce? Put an `x` in all the boxes that apply: -->
- [ ] New feature (non-breaking change which adds functionality)
- [ ] Refactoring (No behavioral changes)
- [x] Bug fix (non-breaking change which fixes an issue)
- [ ] Breaking change (fix or feature that would cause existing functionality to not work as expected)

## Checklist:
<!--- Go over all the following points, and put an `x` in all the boxes that apply. -->
<!--- If you're unsure about any of these, don't hesitate to ask. -->
- [x] My code follows the code style of this project.
- [x] I ran all my tests locally which were green.
- [x] My code adds no new issues to Code Climate
- [x] I ran all the linters for the project.
- [x] My code is in a stable state ready to be deployable, but not necessarily complete.
- [x] I promise on my honor as a CWDS developer to ensure I don't break the build (or bring donuts if I leave things broken), to check linters, use best practices, to leave the code in better shape than I found it, and to have a good day.

--- a/app/javascript/Application/styles/global/card.sass
+++ b/app/javascript/Application/styles/global/card.sass
@@ -4,6 +4,9 @@
   min-width: 30rem
   overflow: visible
 
+.card-fix
+  position: relative
+
 .card-header-cans
   background-color: $white
   border-bottom: 1px solid $medium-gray
